# voting-dapp-sol

./: .gitignore  next.config.ts  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/voting/: Cargo.toml
anchor/programs/voting/src/: lib.rs  tests.rs
app/: layout.tsx  page.tsx
app/actions.json/: route.ts
app/api/vote/: route.ts
app/components/: providers.tsx  voting-card.tsx
