[package]
name = "voting"
version = "0.1.0"
description = "A SOL voting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "=0.6.1"
solana-sdk = "~2.2"
